--- a/style-transfer.ipynb
+++ b/style-transfer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,7 @@
     "import os\n",
     "import math\n",
     "import tensorflow as tf\n",
-    "import PIL as Image\n",
+    "from PIL import Image\n",
     "import time\n",
     "\n",
     "VGG_MEAN = [103.939, 116.779, 123.68]\n",
@@ -121,18 +121,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "building model....\n",
-      "building modle finished:    0s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 测试计算图\n",
     "# vgg16_npy_path = './vgg16.npy'\n",
@@ -145,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +151,7 @@
     "lambda_c = 0.1\n",
     "lambda_s = 500\n",
     "\n",
-    "output_dir = './run_sytle_transfer'\n",
+    "output_dir = './style_transfer'\n",
     "\n",
     "if not os.path.exists(output_dir):\n",
     "    os.mkdir(output_dir)"
@@ -168,9 +159,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From c:\\users\\i076453\\envs\\learn-tensorflow\\lib\\site-packages\\tensorflow\\python\\framework\\op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n",
+      "building model....\n",
+      "building modle finished:    0s\n",
+      "building model....\n",
+      "building modle finished:    0s\n",
+      "building model....\n",
+      "building modle finished:    0s\n",
+      "WARNING:tensorflow:From c:\\users\\i076453\\envs\\learn-tensorflow\\lib\\site-packages\\tensorflow\\python\\ops\\math_ops.py:3066: to_int32 (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Use tf.cast instead.\n"
+     ]
+    }
+   ],
    "source": [
     "def initial_result(shape, mean, stddev):\n",
     "    initial = tf.truncated_normal(shape, mean = mean, stddev = stddev)\n",
@@ -214,18 +224,18 @@
     "\n",
     "content_features = [\n",
     "    vgg_for_content.conv1_2,\n",
-    "#     vgg_for_content.conv2_2,\n",
+    "    vgg_for_content.conv2_2,\n",
     "#     vgg_for_content.conv3_3,\n",
     "#     vgg_for_content.conv4_3,\n",
-    "#     vgg_for_content.conv5_3,\n",
+    "#     vgg_for_content.conv5_3\n",
     "]\n",
     "\n",
     "result_content_features = [\n",
     "    vgg_for_result.conv1_2,\n",
-    "#     vgg_for_result.conv2_2,\n",
+    "    vgg_for_result.conv2_2,\n",
     "#     vgg_for_result.conv3_3,\n",
     "#     vgg_for_result.conv4_3,\n",
-    "#     vgg_for_result.conv5_3,\n",
+    "#     vgg_for_result.conv5_3\n",
     "]\n",
     "\n",
     "style_features = [\n",
@@ -255,13 +265,147 @@
     "    \n",
     "style_loss = tf.zeros(1, tf.float32)\n",
     "for s, s_ in zip(style_gram, result_style_gram):\n",
-    "    style_loss += tf.mean((s - s_) ** 2, [1,2,3])\n",
+    "    style_loss += tf.reduce_mean((s - s_) ** 2, [1,2])\n",
     "    \n",
     "loss = content_loss * lambda_c + style_loss * lambda_s\n",
     "\n",
     "with tf.name_scope('train_op'):\n",
     "    train_op = tf.train.AdamOptimizer(learning_rate).minimize(loss)\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Step 1, loss_value: 34397.1875, style_loss: 263016.5000\n",
+      "Step 2, loss_value: 27787.4961, style_loss: 202175.2969\n",
+      "Step 3, loss_value: 22525.6016, style_loss: 163661.5625\n",
+      "Step 4, loss_value: 18768.7266, style_loss: 141249.2812\n",
+      "Step 5, loss_value: 16539.6777, style_loss: 127344.6719\n",
+      "Step 6, loss_value: 15376.5205, style_loss: 118434.9609\n",
+      "Step 7, loss_value: 14488.3857, style_loss: 111975.1797\n",
+      "Step 8, loss_value: 13333.8027, style_loss: 106350.8984\n",
+      "Step 9, loss_value: 12514.1963, style_loss: 100315.5469\n",
+      "Step 10, loss_value: 11652.3887, style_loss: 93296.4219\n",
+      "Step 11, loss_value: 10760.5742, style_loss: 86291.7812\n",
+      "Step 12, loss_value: 9980.4053, style_loss: 79389.1953\n",
+      "Step 13, loss_value: 9301.1807, style_loss: 72616.1641\n",
+      "Step 14, loss_value: 8625.6221, style_loss: 66653.3203\n",
+      "Step 15, loss_value: 8121.3413, style_loss: 61448.7812\n",
+      "Step 16, loss_value: 7623.6665, style_loss: 57172.3477\n",
+      "Step 17, loss_value: 7248.0312, style_loss: 53338.1211\n",
+      "Step 18, loss_value: 6913.1982, style_loss: 50324.4883\n",
+      "Step 19, loss_value: 6913.1553, style_loss: 47725.2344\n",
+      "Step 20, loss_value: 6473.3511, style_loss: 46296.7109\n",
+      "Step 21, loss_value: 6244.4653, style_loss: 44826.4492\n",
+      "Step 22, loss_value: 6032.9863, style_loss: 43260.7031\n",
+      "Step 23, loss_value: 5830.5200, style_loss: 41507.2578\n",
+      "Step 24, loss_value: 5782.1172, style_loss: 39433.1094\n",
+      "Step 25, loss_value: 5702.6660, style_loss: 38299.2266\n",
+      "Step 26, loss_value: 5696.1045, style_loss: 37246.8672\n",
+      "Step 27, loss_value: 5374.4004, style_loss: 36901.8438\n",
+      "Step 28, loss_value: 5299.7168, style_loss: 36468.3359\n",
+      "Step 29, loss_value: 5252.7148, style_loss: 35469.8477\n",
+      "Step 30, loss_value: 5086.9062, style_loss: 34542.1328\n",
+      "Step 31, loss_value: 4980.3760, style_loss: 33008.4844\n",
+      "Step 32, loss_value: 4775.1357, style_loss: 31881.6992\n",
+      "Step 33, loss_value: 4718.4863, style_loss: 30777.7129\n",
+      "Step 34, loss_value: 4625.5303, style_loss: 30110.2461\n",
+      "Step 35, loss_value: 4699.2583, style_loss: 29274.0977\n",
+      "Step 36, loss_value: 4645.0063, style_loss: 29117.2559\n",
+      "Step 37, loss_value: 4587.9141, style_loss: 28236.4980\n",
+      "Step 38, loss_value: 4373.2944, style_loss: 27673.0156\n",
+      "Step 39, loss_value: 4353.3867, style_loss: 27347.5488\n",
+      "Step 40, loss_value: 4312.3081, style_loss: 26844.7598\n",
+      "Step 41, loss_value: 4256.9170, style_loss: 26606.7676\n",
+      "Step 42, loss_value: 4350.6392, style_loss: 26085.6250\n",
+      "Step 43, loss_value: 4192.2534, style_loss: 26218.8203\n",
+      "Step 44, loss_value: 4156.4648, style_loss: 25915.8477\n",
+      "Step 45, loss_value: 4059.0928, style_loss: 25425.6094\n",
+      "Step 46, loss_value: 3987.9966, style_loss: 24636.0566\n",
+      "Step 47, loss_value: 3915.8545, style_loss: 23967.3594\n",
+      "Step 48, loss_value: 3901.9956, style_loss: 23300.3242\n",
+      "Step 49, loss_value: 3908.1443, style_loss: 23055.4004\n",
+      "Step 50, loss_value: 4211.4956, style_loss: 22511.3203\n",
+      "Step 51, loss_value: 4000.2437, style_loss: 23073.2422\n",
+      "Step 52, loss_value: 3940.9478, style_loss: 23475.3672\n",
+      "Step 53, loss_value: 3958.8696, style_loss: 23773.5312\n",
+      "Step 54, loss_value: 3895.5957, style_loss: 23689.2852\n",
+      "Step 55, loss_value: 3885.1025, style_loss: 23200.5195\n",
+      "Step 56, loss_value: 3835.4175, style_loss: 23021.4941\n",
+      "Step 57, loss_value: 3861.4651, style_loss: 22575.4375\n",
+      "Step 58, loss_value: 3794.9915, style_loss: 22536.1504\n",
+      "Step 59, loss_value: 3772.9302, style_loss: 22056.7891\n",
+      "Step 60, loss_value: 3674.7209, style_loss: 21779.5410\n",
+      "Step 61, loss_value: 3675.5200, style_loss: 21315.1191\n",
+      "Step 62, loss_value: 3626.4556, style_loss: 21130.9375\n",
+      "Step 63, loss_value: 3682.5884, style_loss: 20757.3906\n",
+      "Step 64, loss_value: 3683.0703, style_loss: 20991.9043\n",
+      "Step 65, loss_value: 3734.9478, style_loss: 20633.5312\n",
+      "Step 66, loss_value: 3582.3872, style_loss: 20624.6016\n",
+      "Step 67, loss_value: 3593.1687, style_loss: 20463.7402\n",
+      "Step 68, loss_value: 3532.5459, style_loss: 20497.0215\n",
+      "Step 69, loss_value: 3488.3325, style_loss: 20317.8555\n",
+      "Step 70, loss_value: 3457.5295, style_loss: 19960.4355\n",
+      "Step 71, loss_value: 3412.2769, style_loss: 19536.4551\n",
+      "Step 72, loss_value: 3378.4111, style_loss: 19296.0625\n",
+      "Step 73, loss_value: 3402.7505, style_loss: 18929.3301\n",
+      "Step 74, loss_value: 3563.0874, style_loss: 19048.4629\n",
+      "Step 75, loss_value: 3977.9739, style_loss: 19113.7012\n",
+      "Step 76, loss_value: 3733.9438, style_loss: 20963.3438\n",
+      "Step 77, loss_value: 3765.2710, style_loss: 22185.6328\n",
+      "Step 78, loss_value: 3786.8003, style_loss: 22446.3750\n",
+      "Step 79, loss_value: 3701.7771, style_loss: 22183.1758\n",
+      "Step 80, loss_value: 3681.5059, style_loss: 21495.5156\n",
+      "Step 81, loss_value: 3640.4795, style_loss: 21364.4531\n",
+      "Step 82, loss_value: 3647.7085, style_loss: 21000.2969\n",
+      "Step 83, loss_value: 3563.3745, style_loss: 20867.7109\n",
+      "Step 84, loss_value: 3520.5747, style_loss: 20272.8281\n",
+      "Step 85, loss_value: 3443.5193, style_loss: 19865.9453\n",
+      "Step 86, loss_value: 3461.0186, style_loss: 19319.3379\n",
+      "Step 87, loss_value: 3517.6167, style_loss: 19351.6094\n",
+      "Step 88, loss_value: 3849.6609, style_loss: 19289.5723\n",
+      "Step 89, loss_value: 3742.4390, style_loss: 20466.2246\n",
+      "Step 90, loss_value: 3704.1826, style_loss: 21169.3652\n",
+      "Step 91, loss_value: 3675.4233, style_loss: 21603.0117\n",
+      "Step 92, loss_value: 3647.8599, style_loss: 21560.8203\n",
+      "Step 93, loss_value: 3614.1030, style_loss: 21036.0781\n",
+      "Step 94, loss_value: 3566.9272, style_loss: 20657.0703\n",
+      "Step 95, loss_value: 3585.9126, style_loss: 20216.1758\n",
+      "Step 96, loss_value: 3500.9917, style_loss: 20318.1641\n",
+      "Step 97, loss_value: 3532.4585, style_loss: 19895.3652\n",
+      "Step 98, loss_value: 3473.1907, style_loss: 19648.1953\n",
+      "Step 99, loss_value: 3517.1431, style_loss: 19240.1348\n",
+      "Step 100, loss_value: 3428.1338, style_loss: 19302.9043\n"
+     ]
+    }
+   ],
+   "source": [
+    "init_op = tf.global_variables_initializer()\n",
+    "\n",
+    "with tf.Session() as sess:\n",
+    "    sess.run(init_op)\n",
+    "    for step in range(num_steps):\n",
+    "        loss_value, content_loss_value, style_loss_value, _ \\\n",
+    "            = sess.run([loss, content_loss, style_loss, train_op], \n",
+    "                      feed_dict={\n",
+    "                          content: content_val,\n",
+    "                          style: style_val\n",
+    "                      })\n",
+    "        print('Step %d, loss_value: %8.4f, style_loss: %8.4f' % (step+1, loss_value[0], content_loss_value[0]))\n",
+    "        \n",
+    "        result_img_path = os.path.join(output_dir, 'result_%2d.jpg' % (step+1))\n",
+    "        result_val = result.eval(sess)[0]\n",
+    "        result_val = np.clip(result_val, 0, 255)\n",
+    "        img_arr = np.asarray(result_val, np.uint8)\n",
+    "        img = Image.fromarray(img_arr)\n",
+    "        img.save(result_img_path)"
    ]
   },
   {
